[package]
name = "phobos"
version = "0.1.0"
authors = ["deena_d <silja.rheingans@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
rlibc = "1.0.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"